Fixing slogan on mobile

--- a/themes/custom/leagueofboatwrights/css/styles.css
+++ b/themes/custom/leagueofboatwrights/css/styles.css
@@ -178,7 +178,7 @@ body.path-frontpage.page-node-type-home-page {
   text-align: center;
   font-size: 150%;
   font-family: 'Alegreya SC', Georgia, serif;
-  margin: 40px auto;
+  margin: 35px auto;
   line-height: 100%;
 }
 
